added screenshots to page

--- a/Mafia43Page.html
+++ b/Mafia43Page.html
@@ -23,6 +23,7 @@ body {
     border-width:1px;
     overflow:hidden;
     word-break:normal;
+    text-align: center;
     }
 .tg th{
     font-size:14px;
@@ -56,10 +57,10 @@ body {
   </tr>
   <tr>
     <td class="tg-031e">
-      <img src="/Screenshots/title" style="width:130; height:250"/>
+      <img src="Screenshots/title.png" style="width:170;"/>
     </td>
     <td class="tg-031e">
-      <img src="mybuses_page.png" style="width:130; height:250"/>
+      <img src="Screenshots/mafiakill.png" style="width:170;"/>
     </td>
   </tr>
   <tr>
