Added wiki reference

--- a/Mafia43Page.html
+++ b/Mafia43Page.html
@@ -73,7 +73,7 @@ body {
       List of external libraries and code used in this project:
       <ul>
         <li>
-          No external libraries were used in this project. However, we did get our death text lines from <a href="" target="_blank">this Wikipedia page</a>.
+          No external libraries were used in this project. However, we did get our death text lines from <a href="https://en.wikipedia.org/wiki/List_of_unusual_deaths" target="_blank">this Wikipedia page</a>.
         </li>
       </ul>
     </td>
